--- a/projects/bdd100k.yml
+++ b/projects/bdd100k.yml
@@ -15,7 +15,7 @@ anchors_ratios: '[(0.62, 1.58), (1.0, 1.0), (1.58, 0.62)]'
 
 # BDD100K officially supports 10 classes
 # obj_list: ['person', 'rider', 'car', 'truck', 'bus', 'train', 'motorcycle', 'bicycle', 'traffic light', 'traffic sign']
-obj_list: ['car', 'bus', 'truck', 'train', 'motor']
+obj_list: ['car', 'motor']
 obj_combine: []  # if single class, combine these classes into 1 single class in obj_list
                                                # leave as empty list ([]) to not combine classes
 
@@ -29,12 +29,12 @@ seg_list: ['road','lane']
 seg_multilabel: false  # a pixel can belong to multiple labels (i.e. lane line + underlying road)
 
 dataset:
-  dataroot: /kaggle/input/car-dataset/datasets/imgs
-  labelroot: /kaggle/input/car-dataset/datasets/det_annot
+  dataroot: /kaggle/input/motor-dataset/datasets/imgs
+  labelroot: /kaggle/input/motor-dataset/datasets/det_annot
   segroot:
   # must be in correct order with seg_list
-  - /kaggle/input/car-dataset/datasets/da_seg_annot
-  - /kaggle/input/car-dataset/datasets/ll_seg_annot
+  - /kaggle/input/motor-dataset/datasets/da_seg_annot
+  - /kaggle/input/motor-dataset/datasets/ll_seg_annot
   test_set: val
   train_set: train
   org_img_size:
